# auth-grpc

./: CMakeLists.txt  README.md  auth-grpc.sln  auth-grpc.vcxproj  auth-grpc.vcxproj.filters  build-stubs.bat
cmake/: CMakeLists.txt
grpc/cmake/: protobuf-config-version.cmake  protobuf-module.cmake  protobuf-targets.cmake
grpc/lib/: absl_bad_any_cast_impl.lib  absl_bad_optional_access.lib  absl_bad_variant_access.lib  absl_base.lib  absl_city.lib  absl_civil_time.lib  absl_cord.lib  absl_cord_internal.lib  absl_cordz_functions.lib  absl_cordz_handle.lib  absl_cordz_info.lib  absl_cordz_sample_token.lib  absl_debugging_internal.lib  absl_demangle_internal.lib  absl_examine_stack.lib  absl_exponential_biased.lib  absl_failure_signal_handler.lib  absl_flags.lib  absl_flags_commandlineflag.lib  absl_flags_commandlineflag_internal.lib  absl_flags_config.lib  absl_flags_internal.lib  absl_flags_marshalling.lib  absl_flags_parse.lib  absl_flags_private_handle_accessor.lib  absl_flags_program_name.lib  absl_flags_reflection.lib  absl_flags_usage.lib  absl_flags_usage_internal.lib  absl_graphcycles_internal.lib  absl_hash.lib  absl_hashtablez_sampler.lib  absl_int128.lib  absl_leak_check.lib  absl_leak_check_disable.lib  absl_log_severity.lib  absl_low_level_hash.lib  absl_malloc_internal.lib  absl_periodic_sampler.lib  absl_random_distributions.lib  (+41 more)
grpc/lib/pkgconfig/: absl_algorithm.pc  (+144 more)
protos/: agentcontrol.proto
src/: main.cpp
src/common/: arg-list.cpp  arg-list.h
src/stubs/: agentcontrol.grpc.pb.cc  agentcontrol.grpc.pb.h  agentcontrol.pb.cc  agentcontrol.pb.h
(+8 files in other folders)
